// protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

package site;

option go_package = "jh_admin_service/api/backend/site/v1";

service Site {
    rpc GetBasicSetting(GetBasicSettingReq) returns (GetBasicSettingRes) {}
    rpc UpdateBasicSetting(UpdateBasicSettingReq) returns (UpdateBasicSettingRes) {}
}

message GetBasicSettingReq {
    // 站点ID，可选，如果不传则使用当前站点
    int32 site_id = 1;
}

message GetBasicSettingRes {
    string code = 1;                        // 站点代码
    string name = 2;                        // 站点名称
    int32 register_time_interval = 3;       // 同一IP重复注册时间间隔
    bool switch_register = 4;               // 是否开放注册
    bool is_close = 5;                      // 是否关闭站点
    string close_reason = 6;                // 关闭原因
    string url_service = 7;                 // 客服链接
    string url_agent_pc = 8;                // 代理链接地址
    string url_mobile = 9;                  // 手机域名地址
    string url_agent_register = 10;         // 代理推广地址
    int32 min_withdraw = 11;                // 单笔最低提现金额
    int32 max_withdraw = 12;                // 单笔最高提现金额
    string mobile_logo = 13;                // 手机端Logo
    int32 default_agent_id = 14;            // 默认代理ID
    string default_agent_name = 15;         // 默认代理名称
    double balance = 16;                    // 总可用额度
    double balance_reset = 17;              // 剩余额度
}

message UpdateBasicSettingReq {
    int32 site_id = 1;                      // 站点ID，可选
    int32 register_time_interval = 2;       // 同一IP重复注册时间间隔
    bool switch_register = 3;               // 是否开放注册
    bool is_close = 4;                      // 是否关闭站点
    string close_reason = 5;                // 关闭原因
    string url_agent_pc = 6;                // 代理链接地址
    string url_mobile = 7;                  // 手机域名地址
    string url_agent_register = 8;          // 代理推广地址
    int32 min_withdraw = 9;                 // 单笔最低提现金额
    int32 max_withdraw = 10;                // 单笔最高提现金额
    string mobile_logo = 11;                // 手机端Logo
    string url_service = 12;                // 客服链接
}

message UpdateBasicSettingRes {
    string message = 1;                     // 响应消息
}